nx-desktop-appimages (0.1.9)  nitrux; urgency=medium

  * Update inkscape, gimp, kdenlive and remove lmms appimages.

 -- Uri Herrera <uri_herrera@nxos.org>  Thu, 08 Jul 2021 14:10:00 -0500

nx-desktop-appimages (0.1.8)  nitrux; urgency=medium

  * Update inkscape, gimp, kdenlive, libreoffice appimages.

 -- Uri Herrera <uri_herrera@nxos.org>  Mon, 17 May 2021 16:18:00 -0500

nx-desktop-appimages (0.1.7)  nitrux; urgency=medium

  * Adon't add maui appimage suntil they're fixed.

 -- Uri Herrera <uri_herrera@nxos.org>  Sun, 02 May 2021 23:38:00 -0500

nx-desktop-appimages (0.1.6)  nitrux; urgency=medium

  * Update kdenlive.

 -- Uri Herrera <uri_herrera@nxos.org>  Fri, 30 Apr 2021 00:18:00 -0500

nx-desktop-appimages (0.1.5)  nitrux; urgency=medium

  * Add package conflicts field.

 -- Uri Herrera <uri_herrera@nxos.org>  Sat, 17 Apr 2021 17:46:00 -0500

nx-desktop-appimages (0.1.4)  nitrux; urgency=medium

  * Silence command output, change URL for apps.

 -- Uri Herrera <uri_herrera@nxos.org>  Sat, 17 Apr 2021 17:42:00 -0500

nx-desktop-appimages (0.1.3)  nitrux; urgency=medium

  * Fix command to download AppImages.

 -- Uri Herrera <uri_herrera@nxos.org>  Fri, 16 Apr 2021 16:26:00 -0500

nx-desktop-appimages (0.1.2)  nitrux; urgency=medium

  * Don't exit on error}

 -- Uri Herrera <uri_herrera@nxos.org>  Thu, 15 Apr 2021 06:41:00 -0500

nx-desktop-appimages (0.1.1)  nitrux; urgency=medium

  * Update package.

 -- Uri Herrera <uri_herrera@nxos.org>  Thu, 06 Apr 2021 00:53:00 -0500

nx-desktop-appimages (0.1.0)  nitrux; urgency=medium

  * Ignore SSL errors and continue.

 -- Uri Herrera <uri_herrera@nxos.org>  Mon, 05 Apr 2021 21:55:00 -0500

nx-desktop-appimages (0.0.9)  nitrux; urgency=medium

  * Update kdenlive, inkscape, gimp.

 -- Uri Herrera <uri_herrera@nxos.org>  Wed, 31 Mar 2021 17:20:00 -0500

nx-desktop-appimages (0.0.8)  nitrux; urgency=medium

  * use older appimaged.

 -- Uri Herrera <uri_herrera@nxos.org>  Fri, 05 Mar 2021 03:30:00 -0500
