@@ -10,13 +10,6 @@ script:
 branches:
   only:
   - main
-  
-deploy:
-  - provider: script
-    script: wget -qO - https://raw.githubusercontent.com/Nitrux/nitrux-repository-util/master/upload-pkgs | sh -s *.deb
-    skip_cleanup: true
-    on:
-      branch: main
 
 notifications:
   email: false
