@@ -1,3 +1,9 @@
+nx-desktop-appimages (0.2.0)  nitrux; urgency=medium
+
+  * Update inkscape, gimp, kdenlive and remove lmms appimages.
+
+ -- Uri Herrera <uri_herrera@nxos.org>  Tue, 03 Aug 2021 12:02:00 -0500
+
 nx-desktop-appimages (0.1.9)  nitrux; urgency=medium
 
   * Update inkscape, gimp, kdenlive and remove lmms appimages.
